Funcionalidade: Implementar operações CRUD para doações, incluindo tratamento de erros e autenticação
 -   Adicionados controladores para criar, recuperar e excluir doações.
  -  Integrado middleware de autenticação para rotas relacionadas a doações.
   - Tratamento de erros aprimorado para voluntários e doações inexistentes.
 - Camada de serviço atualizada para gerenciar dados de doação e ajustes de estoque.
   - Schemas de validação refatorados para melhor comunicação de erros.
   - Rotas seguras para beneficiários, distribuições, cartões, condições, tamanhos, tipos e voluntários com verificações de autenticação.
   - Documentação OpenAPI melhorada para melhor usabilidade da API.
